# project

./: .env  agents.db  app.py  career_assistant.py  js  main.py  pyproject.toml  requirements.txt  server.js  setup.py  vercel.json
api/: analyze.py
career_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
uploads/: 6cbf650b-0304-4f70-ade4-a8f8ead63002_Albha.odt  b3ba3bdd-5749-48e8-83ba-6a4c0945ccd7_career_assistant.py
